--- a/styles/style.css
+++ b/styles/style.css
@@ -15,27 +15,50 @@
 	margin: 30px auto 30px auto;
 }.copyrightText{
 	padding-bottom: 1%;
-}.footer-link{
+}.contact-me h3{
+	margin-bottom: 3%;
+}.emailButton{
+	margin-top: 0;
+}.header-link{
 	text-decoration: none;
+	position: relative;
+	left: 10%;
 }.mainContent{
-	text-align: center;
-	width: 30%;
+	/*text-align: center;*/
+	position: relative;
+	left: 20%;
+	padding-top: 5%; 
 	margin: auto;
+	width: 30%;
+	font-size: 14pt;
 }.nextTech{
 	padding-top: 10%;
 	padding-bottom:10%;
 	
 }.nextTech li{
 	list-style-type: none;
-	text-align: left;
-	padding-left: 25%;
+	text-align: center;
+}.profilePicture img{
+	position: relative;
+	left: 12%;
+	padding-top: 5%; 
+	float: left;
+
 }.tagline{
-	padding-bottom: 3%;
-}.mediaIcon{
+	text-align:left;
+	padding-left: 7%;
+	float: left;
+
+}.topHr{
+	width: 88%;
+	left: 1%;
+	right: 1%;
+}
+.mediaIcon{
 	width: 2%;
   	height: auto;
-  	padding-right:1%;
-  	padding-top:1%;
+  	padding-right: 2%;
+  	padding-top: 2%;
 
 }.whatAbout{
 	padding-bottom: 10%;
@@ -49,11 +72,18 @@ body{
 
 }footer{
 	background-color: gray;
-	margin: 0px;
+	height: 80px;
+	/*margin: 0px;
+	position: relative;
+	bottom: 0px;*/
+	text-align: left;
+	padding-left: 8%;
+	padding-top: 1%;
+	font-size: 14pt;
 }hr{
 	border-style: none;
 	border-top: dotted 5px gray;
-	width: 8%;
+	width: 15%;
 	margin: auto;
 ;
 }h3{
